# Seoul_Journey_Project

./: .gitignore  README.md
Project/: docker-compose.yml
Project/backend/: Dockerfile  app.py  pyproject.toml
Project/frontend/: Dockerfile  index.html  package-lock.json  package.json
Project/frontend/src/: App.jsx
Project/frontend/src/pages/: LoginPage.jsx  MainPage.jsx  ResultPage.jsx  SignupPage.jsx
